@@ -79,6 +79,7 @@ require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
 require 'lobbyist/v2/customer'
 require 'lobbyist/v2/data_upload'
+require 'lobbyist/v2/email_invitation_metrics'
 require 'lobbyist/v2/email_invitation'
 require 'lobbyist/v2/enterprise_setting'
 require 'lobbyist/v2/enterprise_user'
